--- a/src/components/BirthingProgram/birthingprogram.css
+++ b/src/components/BirthingProgram/birthingprogram.css
@@ -1,5 +1,5 @@
 /* Hero Section */
-/* .hero {
+.hero {
   width: 100%;
   height: 90vh; 
   background-size: cover;
@@ -33,28 +33,28 @@
     background-image: url('../../assets/images/esystem/e-system.jpg'); 
     background-position: center top;
   }
-} */
+}
 
 
-/* .exchange-widget {
+.exchange-widget {
     width: 400px; 
     height: 300px; 
     margin: 0 auto; 
     padding: 30px;
     background-color: #11101B;
     color: #fff; /* Text */
-    /* text-align: center;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);  */ */
+    text-align: center;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); 
   
     /* Center the box vertically and horizontally on the page */
-    /* position:sticky;
+    position:sticky;
     top: 100%;
     left: 60%;
     transform: translate(-50%, -50%);
     z-index: 1;
   }
-   */
-  /* .exchange-widget h3 {
+  
+  .exchange-widget h3 {
     font-size: 20px; 
     margin-bottom: 20px;
     text-transform: uppercase;
@@ -89,10 +89,10 @@
     background-repeat: no-repeat;
     background-size: 16px 16px; 
     background-position: right 10px center; 
-  } */
+  }
   
-  /* .date-input::-webkit-calendar-picker-indicator {
-    filter: invert(100%); 
+  .date-input::-webkit-calendar-picker-indicator {
+    filter: invert(100%); /* Changes the icon color to white */
     opacity: 1;
     cursor: pointer;
   }
@@ -136,7 +136,7 @@
   
   .search-button:hover {
     background-color: #FFC107; 
-  } */
+  }
 
 
 /* Berthing System */
@@ -150,16 +150,16 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   color: #fff;
   text-align: center;
-  position: absolute;
+  /* position:absolute; */
   top: 90%;
-  left: 12%;
+  /* left: 12%; */
   transform: translateY(-50%);
   z-index: 2;
-  overflow: hidden; /* Hide overflow */
+  overflow: hidden; 
 }
 /* Table Container */
 .table-container {
-  display: flex;
+  display:block;
   flex-direction: column;
   height: 100%;
 }
