--- a/src/pages/Esystem/esystem.css
+++ b/src/pages/Esystem/esystem.css
@@ -90,6 +90,13 @@
   background-color: #ffc107;
 }
 
+/* Rate Text */
+.rate_text {
+  margin-top: 10px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #ffcc00;
+}
 
 
   .form-group {
