--- a/src/pages/Ports/Colombo/colombo.css
+++ b/src/pages/Ports/Colombo/colombo.css
@@ -154,6 +154,7 @@
   text-align: center;
   padding: 15px;
   font-size: 1rem;
+  margin-top: -30px;
 }
 
 .ad-small {
@@ -209,7 +210,7 @@
 
 /* Image container for the 3D effect */
 .image-container_1 {
-  width: 400px; /* Default width for images */
+  width: 600px; /* Default width for images */
   height: 80px; /* Default height for images */
   transform-style: preserve-3d; /* Enable 3D transformations */
   transition: transform 0.6s ease; /* Smooth transition */
@@ -224,11 +225,13 @@
 
 /* Individual image styling */
 .image_1 {
-  width: 100px; /* Make the image fit the container */
-  height: 100%; /* Make the image fit the container */
+  max-width: 100%; /* Make the image fit the container */
+  height: auto; /* Make the image fit the container */
   object-fit: cover; /* Maintain aspect ratio */
   border-radius: 0px; /* Add rounded corners */
-  margin-top: 50px;
+  margin-top: -5px;
+  gap: 2px;
+  
 }
 
 
@@ -295,6 +298,16 @@
 
   .ad-large {
     height: 150px;
+  }
+
+  .image_1 {
+    width: 100%; /* Make the image fit the container */
+    height: 120px; /* Make the image fit the container */
+    object-fit: cover; /* Maintain aspect ratio */
+    border-radius: 0px; /* Add rounded corners */
+    margin-top: 25px;
+    gap: 2px;
+    
   }
 }
 
