--- a/src/pages/Ect/ect.css
+++ b/src/pages/Ect/ect.css
@@ -96,7 +96,7 @@
 }
 
 .timeline {
-  background-color: #f4f4f4;
+  background-color: #b3b3b3;
 }
 
 /* Vertical Timeline */
@@ -131,6 +131,7 @@
   border-radius: 50%;
 }
 
+
 /* Swiper Styles inside Timeline */
 .timeline-swiper {
   width: 100%;
@@ -151,7 +152,17 @@
 }
 
 .swiper-pagination-bullet {
-  background: #ffc000 !important;
+  width: 12px;
+  height: 12px;
+  background-color: #ffc000; /* Change dot color */
+  opacity: 0.7;
+  transition: opacity 0.3s ease;
+  margin-top: 20px;
+}
+
+.swiper-pagination-bullet-active {
+  opacity: 1;
+  background-color: #ffffff; /* Change active dot color */
 }
 
 /* Mobile Responsive */
