--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ nav ul li{
   margin: 5px 20px;
   font-size: 16px;
 } */
-/* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Arial&display=swap" rel="stylesheet'); */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Arial&display=swap" rel="stylesheet');
 *{
   margin: 0;
   padding: 0;
