--- a/src/pages/Esystem/esystem.css
+++ b/src/pages/Esystem/esystem.css
@@ -143,8 +143,8 @@ div > .esystem-container {
   text-align: center;
 }
 
-/* 
-@media (max-width: 1200px) {
+
+/* @media (max-width: 1200px) {
   .esystem-container {
     height: auto; 
     padding: 20px; 
@@ -187,35 +187,58 @@ div > .esystem-container {
   }
 } */
 
-@media (max-width: 768px) {
+@media (max-width: 1400px) {
   .esystem-container {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
     height: auto;
-    padding: 30px 10px;
+    padding: 20px;
   }
 
   .berthing-exchange-container {
     flex-direction: column;
-    align-items: center;
-    margin-top: 50px;
+    margin-top: 100px; 
     margin-left: 0;
-    text-align: center;
+    align-items: center; 
   }
 
   .berthing-program {
+    width: 100%; 
     padding: 10px;
+    text-align: center; 
+    margin-top: 0; 
   }
 
   .exchange-widget {
-    width: 95%;
-    max-width: 350px;
-    margin-top: 20px;
-    padding: 20px;
+    width: 350px; 
+    height: auto; 
+    margin-top: 20px; 
+    padding: 20px; 
+    position: static; 
+    transform: none; 
+  }
+
+  .exchange-widget h3 {
+    font-size: 18px; 
+  }
+
+  .form-group label {
+    font-size: 14px;
+  }
+
+  .date-input {
+    font-size: 12px; 
+  }
+
+  .currency-display {
+    font-size: 16px;
+  }
+
+  .rate_text {
+    font-size: 16px; 
   }
 
   .search-button {
-    padding: 12px 20px;
+    width: 100%; 
+    padding: 10px 20px; 
+    font-size: 14px; 
   }
 }
