--- a/src/pages/Esystem/esystem.css
+++ b/src/pages/Esystem/esystem.css
@@ -15,7 +15,7 @@ div > .esystem-container {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover; 
-  width: 100vw; 
+  width: 100%; 
   height: 100vh; 
   display: flex; 
   justify-content: center; 
