--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -175,10 +175,12 @@
   color: #000;
   position: relative;
   padding: 10px;
-  margin-top: 300px;
-  text-align: right;
+  margin-top: 150px;
+  text-align: center;
+  letter-spacing: 5px;
   position: static;
 }
+
 
 /* E-System Button Styling */
 .esystem-button {
