--- a/src/pages/Ports/Colombo/colombo.css
+++ b/src/pages/Ports/Colombo/colombo.css
@@ -104,6 +104,7 @@
   display: flex;
   flex-wrap: wrap; /* Allow wrapping for smaller screens */
   margin: 20px 0;
+  width: 100%;
 }
 
 .content-section {
@@ -124,7 +125,7 @@
 }
 
 .content-image {
-  width: 90%;
+  width: 80%;
   margin-bottom: 20px;
 }
 
@@ -192,27 +193,28 @@
 }
 
 /* Image container for the 3D effect */
-.image-container_1 {
-  width: 600px; /* Default width for images */
-  height: 80px; /* Default height for images */
-  transform-style: preserve-3d; /* Enable 3D transformations */
-  transition: transform 0.6s ease; /* Smooth transition */
-  transform: rotateY(0deg); /* Initial position */
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Add shadow for depth */
-}
+/*.image-container_1 {
+  width: 90%; /* Default width for images */
+ /* height: 80px; /* Default height for images */
+ /* transform-style: preserve-3d; /* Enable 3D transformations */
+ /* transition: transform 0.6s ease; /* Smooth transition */
+ /* transform: rotateY(0deg); /* Initial position */
+  /*box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Add shadow for depth */
+/*}*/
+
 
 .image-container_1:hover {
   transform: rotateY(15deg); /* Rotate on hover */
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); /* Enhance shadow on hover */
+  /*box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); /* Enhance shadow on hover */
 }
 
 /* Individual image styling */
 .image_1 {
-  max-width: 100%; /* Make the image fit the container */
+  width: 90%; /* Make the image fit the container */
   height: auto; /* Make the image fit the container */
   object-fit: cover; /* Maintain aspect ratio */
   border-radius: 0px; /* Add rounded corners */
-  margin-top: -20px;
+  margin-top: -70px;
   gap: 2px;
   
 }
