--- a/src/components/Common/Footer/footer.css
+++ b/src/components/Common/Footer/footer.css
@@ -87,11 +87,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px;
+  /* padding: 15px; */
+  width: 100%;
+  height: 50px;
   font-size: 12px;
   background-color: #000000;
   color: #ffffff;
-  margin-top: 30px;
+  /* margin-top: 0px; */
 }
 
 .footer-bottom-left,
