--- a/src/pages/Ports/Colombo/colombo.css
+++ b/src/pages/Ports/Colombo/colombo.css
@@ -14,9 +14,10 @@ body {
 /* Header Section */
 .header-section {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 50vh;
   margin-top: 70px;
+  margin: 0;
 }
 
 .header-section h1,
@@ -373,9 +374,9 @@ body {
   }
 
   .small-box {
-    width: 100px;
+    width: 80px;
     height: 40px;
-    font-size: 12px;
+    font-size: 10px;
   }
 }
 
