--- a/src/components/Banner/banner.css
+++ b/src/components/Banner/banner.css
@@ -209,6 +209,12 @@
   }
   .language-buttons button {
     font-size: 8px;
-    padding: 4px 10px;
+    padding: 2px 8px;
+  }
+  /* Contact info */
+  .contact-info {
+    display: flex;
+    align-items: center;
+    gap: 1px; /* Reduce spacing */
   }
 }
