--- a/src/components/Banner/banner.css
+++ b/src/components/Banner/banner.css
@@ -187,7 +187,8 @@
   }
 
   .phone-icon {
-    font-size: 14px;
+    font-size: 16px;
+    width: 20px;
   }
 
   .inquiry-number {
@@ -201,6 +202,7 @@
   .notice-button{
     font-size: 8px;
     padding: 4px 10px;
+    margin-left: 10px;
   }
 
   .help-desk-button{
